[FEAT]: 회원가입 서버통신완료

--- a/FenceApp/Info.plist
+++ b/FenceApp/Info.plist
@@ -4,7 +4,14 @@
 <dict>
 	<key>CFBundleURLTypes</key>
 	<array>
-		<dict/>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>app-1-444539823777-ios-fd3de5b5f712f1ab2e32e0</string>
+			</array>
+		</dict>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
