[FEAT]: Launch Screen 구현, Found 게시글 추가시 Mappin 리프레쉬

--- a/FenceApp/Info.plist
+++ b/FenceApp/Info.plist
@@ -40,5 +40,12 @@
 		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>LaunchImage</string>
+		<key>UIImageName</key>
+		<string>LaunchImage</string>
+	</dict>
 </dict>
 </plist>
