[REFACTOR]: 댓글 버튼 위치 조정

--- a/FenceApp/Info.plist
+++ b/FenceApp/Info.plist
@@ -10,6 +10,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>app-1-444539823777-ios-83a4eec1b88a24a82e32e0</string>
+				<string>app-1-776734142647-ios-5ffc97a232411df76c9d32</string>
 			</array>
 		</dict>
 		<dict>
